<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.MapFragments">

    <!-- TODO: Update blank fragment layout -->


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="24dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin">

        <LinearLayout
            style="@style/Widget.CardContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_ChemicalCompounds"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <com.example.medicalplants.Class.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_ChemicalCompound"
                android:text="@string/title_ChemicalCompounds" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_margin"
            android:layout_marginLeft="@dimen/card_margin"
            android:layout_marginRight="@dimen/card_margin">

        <LinearLayout
            style="@style/Widget.CardContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_Habitat"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <com.example.medicalplants.Class.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_Habitat"
                android:text="@string/title_Habitat"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_Agriculture"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <com.example.medicalplants.Class.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_Agriculture"
                android:text="@string/title_Agriculture" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_SoilType"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <com.example.medicalplants.Class.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_SoilType"
                android:text="@string/title_SoilType" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_WaterReq"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <com.example.medicalplants.Class.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_WaterReq"
                android:text="@string/title_WaterReq" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_KodeNeeds"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
            <com.example.medicalplants.Class.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_KodeNeeds"
                android:text="@string/title_KodeNeeds" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_Flowring"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <com.example.medicalplants.Class.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_Flowring"
                android:text="@string/title_Flowring" />





        </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>